--- a/book-tracker-client/package.json
+++ b/book-tracker-client/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:css": "tailwindcss -i ./src/index.css -o ./dist/output.css --watch",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
-    "@tailwindcss/postcss": "^4.1.10",
+    "@tailwindcss/cli": "^4.1.10",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
