--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,16 +9,17 @@ Flask-Migrate==4.1.0
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
+packaging==25.0
 psycopg2-binary==2.9.9
 PyJWT==2.10.1
-python-dotenv==1.1.1
 pytz==2024.2
 six==1.17.0
-SQLAlchemy==2.0.29
+SQLAlchemy==2.0.41
 sqlalchemy-serializer==1.4.22
 typing_extensions==4.14.0
 Werkzeug==3.1.3
